--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -14,7 +14,7 @@ h2{
 }
 
 /*selector descendiente*/
-div p{
+.principal p{
     color: red;
     text-align: justify;
 }
@@ -23,7 +23,7 @@ div p{
 .principal{
     width: 300px;
     height: 85px;
-    margin: 0 auto;
+    margin: 200px auto;
 }
 
 /*selector de id*/
@@ -44,3 +44,17 @@ div p{
     border-radius: 10px;
     width: 100px;
 }
+
+/*selectores hijos*/
+footer>h6{
+    text-align: center;
+    margin: 20px 0;
+}
+
+/*selectores adiacente*/
+
+h6+p{
+    text-align: center;
+}
+
+
