--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -53,7 +53,16 @@ footer>h6{
 
 /*selectores adiacente*/
 
-p+p{
+h4+p{
+    text-align: center;
+}
+h4+p+p{
+    text-align: center;
+}
+h4+p+p+p{
+    text-align: center;
+}
+h4+p+p+p+p{
     text-align: center;
 }
 
