--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -38,9 +38,10 @@ h2{
     margin: 10px 0;
     height: 20px;
 }
-.principal #textos laabel{
+.principal #textos label{
     border-radius: 10px;
     width: 100px;
+    color: black;
 }
 
 /*selectores hijos*/
@@ -59,10 +60,10 @@ h4+p{
 }
 h4+p+p+p{
     text-align: center;
-}
-h4+p+p+p+p{
-    text-align: center;
 }*/
+h4+p+p+p+p{
+    color: red;
+}
 
 /*selector del hermano general*/
 h4~p{
@@ -82,14 +83,16 @@ a[href]{
 a[href="registro"]{
     float: right;
     text-decoration: none;
+    text-align: center
 }
 
 input[type="submit"] {
      background: linear-gradient(#2929bf,#7c94cb);
     border:5px;
     color: black;
-     width: 50px;
-    margin-bottom: 10px;
+     width: 80px;
+    height: 25px;
+    text-align: center;
 }
 
 input[type="text"] {
@@ -156,6 +159,9 @@ input[type="text"]:hover {
 input[type="password"]:hover {
     background: black;
     color: white;
+}
+input[type="submit"]:hover {
+    opacity: 0.9;
 }
 
 /*focus*/
